# Dockingjudge

./: .env  .gitignore  CNAME  LAUNCH.md  README.md  TODO.txt  api_gateway_nginx.conf  docker-compose.yml  dockingjudge.aisle  justfile  openapi.yml  test.http  test_js_acceptor.py
AccountService/: .flake8  Dockerfile  account_service.yml  docker-compose-account-svc.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  start.sh
AccountService/account_service/: asgi.py  config.py  settings.py  urls.py  wsgi.py
AccountService/api/: apps.py  authentication.py  exceptions.py  middleware.py  models.py  rmq.py  serializers.py  views.py
AccountService/api/management/commands/: rmq_init.py
AccountService/api/migrations/: 0001_initial.py
AccountService/api/views/: ping.py  profiles.py  register_login.py
AccountService/tests/: common.py  test_get_user.py  test_login.py  test_profile.py  test_register.py
JudgeService/: .coveragerc  .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  config.dev.yml  config.prod.yml  config.yml  docker-compose-judge-svc.yml  justfile  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  start.sh
JudgeService/judgeservice/: application.py  config.py  configuration.py  exceptions.py  handle.py  judgelet.py  main.py  settings.py
JudgeService/judgeservice/application/: interactors.py  interfaces.py
JudgeService/judgeservice/controllers/: mq.py  schemas.py
JudgeService/judgeservice/domain/: entities.py  exceptions.py
JudgeService/judgeservice/infrastructure/: pool.py  rmq.py
JudgeService/judgeservice_legacy/: configuration.py  exceptions.py
JudgeService/src/judgeservice/: config.py  di.py  exceptions.py
JudgeService/src/judgeservice/application/: interactors.py  interfaces.py
JudgeService/src/judgeservice/bootstrap/: app.py  config.py  di.py  exceptions.py  logging.py
JudgeService/src/judgeservice/controllers/: mq.py  schemas.py
JudgeService/src/judgeservice/domain/: entities.py  exceptions.py
JudgeService/src/judgeservice/infrastructure/: judgelet.py  rmq.py  solutions.py
JudgeService/tests/unit/: conftest.py  factory.py  fakes.py  test_selection.py  test_strategies.py  test_usecase.py
JudgeUnit/: .dockerignore  .flake8  Dockerfile  app.py  docker-compose-judgelets.yml  judgelet.yml  justfile  llaunch.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  start.sh  test_request.json
JudgeUnit/judgelet/: application.py  class_loader.py  encoding.py  exceptions.py  main.py  models.py  runner.py  settings.py
JudgeUnit/judgelet/application/: interactors.py  interfaces.py  precompile_checkers.py
JudgeUnit/judgelet/compilers/: abc_compiler.py  cpp_compiler.py  default_compiler.py  python_compiler.py  shell_executor.py
JudgeUnit/judgelet/controllers/: http.py  schemas.py
JudgeUnit/judgelet/data/: __init__.py  container.py
JudgeUnit/judgelet/domain/: checking.py  execution.py  results.py  sandbox.py  test_case.py  test_group.py  test_suite.py
JudgeUnit/judgelet/infrastructure/: encoding.py  filesystem.py  shell_executor.py
JudgeUnit/judgelet/infrastructure/languages/: lang_list.py  repo.py
JudgeUnit/judgelet/infrastructure/sandboxes/: simple.py
JudgeUnit/judgelet/sandbox/: sandbox.py  shell_executor.py
JudgeUnit/judgelet/testing/: __init__.py
JudgeUnit/judgelet/testing/precompile/: __init__.py  abc_precompile_checker.py  contains_pattern_checker.py  no_import_checker.py  no_pattern_checker.py  pattern_checker.py
JudgeUnit/judgelet/testing/tests/: testcase.py  testgroup.py  testsuite.py
JudgeUnit/judgelet/testing/validators/: __init__.py  abc_validator.py  file_validator.py  stdout_validator.py
JudgeUnit/judgelet_legacy/: __init__.py  application.py  exceptions.py  main.py  models.py  runner.py
JudgeUnit/judgelet_legacy/compilers/: __init__.py  cpp_compiler.py  python_compiler.py
JudgeUnit/judgelet_legacy/sandbox/: __init__.py
JudgeUnit/judgelet_legacy/testing/tests/: __init__.py
JudgeUnit/judgelet_legacy/testing/validators/: file_validator.py
JudgeUnit/scripts/: fix_coverage.py
JudgeUnit/src/judgelet/: config.py  di.py  main.py
JudgeUnit/src/judgelet/application/: constants.py  interactors.py  interfaces.py  precompile_checkers.py  scoring_poilicies.py  validators.py
JudgeUnit/src/judgelet/bootstrap/: app.py  config.py  di.py  logging.py
JudgeUnit/src/judgelet/controllers/: http.py  schemas.py
JudgeUnit/src/judgelet/domain/: checking.py  execution.py  files.py  results.py  sandbox.py  test_case.py  test_group.py  test_suite.py
JudgeUnit/tests/container/: conftest.py  test_cpp17.py  test_generic.py  test_python.py
JudgeUnit/tests/integration/: api_connection.py  conftest.py  fixtures.py  test_data_containers.py  test_run_suite.py
JudgeUnit/tests/unit/: conftest.py  factory.py  fakes.py  test_checker_usecase.py  test_data_containers.py  test_multigroup.py  test_precompile_checkers.py  test_runner_fails.py  test_sandbox.py  test_scoring_policies.py  test_testing_classes.py  test_validator_verdicts.py  test_validators.py
SolutionService/: .dev.env  .flake8  .gitignore  Dockerfile  alembic.ini  app.py  docker-compose-solution-svc.yml  justfile  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  solution_service.yml  start.sh  test_base.db  uvicorn-log-config.json
SolutionService/api/: auth.py  models.py  quiz_checker.py  rmq.py  serializers.py  tasks.py  views.py
SolutionService/api/migrations/: 0001_initial.py
SolutionService/solution_service/: annotations.py  config.py  di.py  main.py  settings.py  urls.py
SolutionService/solution_service/application/: checker_loader.py  dto.py  exceptions.py  interactors.py
SolutionService/solution_service/controllers/: http.py  mq.py  schemas.py
SolutionService/solution_service/infrastructure/: account_service.py  contest_service.py  exceptions.py  rmq.py
SolutionService/src/solution_service/: annotations.py  config.py  di.py  main.py
SolutionService/tests/partial/: conftest.py  helpers.py  test_standings_sql.py
SolutionService/tests/unit/: factory.py  fakes.py
(+324 files in other folders)
