[project]
name = "judgeservice"
version = "0.1.0"
description = "Dockingjudge Judge Service"
authors = [
    {name = "Tapeline", email = "mail@tapeline.dev"}
]
license = {text = "GNU GPL v3.0"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "faststream[cli] (>=0.5.34,<0.6.0)",
    "dishka (>=1.4.2,<2.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "aio-pika (>=9.5.4,<10.0.0)",
    "structlog>=25.4.0",
    "fuente",
]

[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.uv.sources]
fuente = { git = "https://github.com/Tishka17/fuente.git" }

[dependency-groups]
lint = [
    "import-linter>=2.5",
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "wemake-python-styleguide>=1.4.0",
]
test = [
    "polyfactory>=2.22.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "smart-covdefaults>=0.1.0",
]
