[project]
name = "judgelet"
version = "0.1.0"
description = "A scalable testing unit"
authors = [
    {name = "Tapeline",email = "yt.redstone.mail@gmail.com"}
]
license = {text = "GNU GPL v3.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "litestar[pydantic,standard] (>=2.15.1,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "dishka (>=1.5.2,<2.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^1.1.0"
pytest = "^8.3.5"
requests = "^2.32.3"
mypy = "^1.15.0"
import-linter = "^2.3"
pytest-cov = "^6.1.0"
ruff = "^0.11.2"

