[project]
name = "judgelet"
version = "0.1.0"
description = "A scalable testing unit"
authors = [
    {name = "Tapeline", email = "mail@tapeline.dev"}
]
license = {text = "GNU GPL v3.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "litestar[pydantic,standard] (>=2.15.1,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "dishka (>=1.5.2,<2.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
]

[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[dependency-groups]
lint = [
    "import-linter>=2.5",
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "wemake-python-styleguide>=1.4.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "smart-covdefaults>=0.1.0",
]
