[tool.poetry]
name = "solution_service"
version = "0.1.0"
description = ""
authors = ["Tapeline <yt.redstone.mail@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
litestar = {extras = ["sqlalchemy"], version = "^2.13.0"}
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
boto3 = "^1.35.90"
dishka = "^1.4.2"
faststream = {extras = ["rabbit"], version = "^0.5.33"}
alembic = "^1.14.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
uvicorn = "^0.34.0"
minio = "^7.2.14"
aiohttp = "^3.11.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
