[project]
name = "solution_service"
version = "0.1.0"
description = ""
authors = [
    {name = "Tapeline", email = "mail@tapeline.dev"}
]
license = {text = "GNU GPL v3.0"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "litestar[prometheus,sqlalchemy] (>=2.15.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "dishka (>=1.5.2,<2.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "faststream[rabbit] (>=0.5.37,<0.6.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "psycopg[binary,pool] (>=3.2.3)",
    "fuente",
    "inflection>=0.5.1",
    "structlog>=25.4.0",
    "asgi-monitor>=0.6.0",
]


[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.uv.sources]
fuente = { git = "https://github.com/Tishka17/fuente.git" }

[dependency-groups]
lint = [
    "import-linter>=2.5",
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "wemake-python-styleguide>=1.4.0",
]
test = [
    "aiosqlite>=0.21.0",
    "polyfactory>=2.22.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "smart-covdefaults>=0.1.0",
]
